--- a/.github/workflows/job.yml
+++ b/.github/workflows/job.yml
@@ -42,4 +42,4 @@ jobs:
           Using Flake8
         run: |
           pip install flake8
-          flake8 --ignore=F401 .
+          flake8 --ignore=F401,E501 .
